Update index.html with new content and styles

--- a/index.html
+++ b/index.html
@@ -4,45 +4,112 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TrapStack</title>
+  <meta name="description" content="TrapStack is a collection of dumb ideas involving spring-loaded traps that somehow turned into fun games at parties." />
+
   <style>
     body {
-      font-family: system-ui, -apple-system, sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   Roboto, Helvetica, Arial, sans-serif;
       max-width: 720px;
       margin: 3rem auto;
-      padding: 0 1rem;
+      padding: 0 1.25rem;
       line-height: 1.6;
+      color: #111;
     }
-    h1 { font-size: 2.5rem; }
-    footer { margin-top: 4rem; font-size: 0.9rem; color: #666; }
+
+    h1 {
+      font-size: 2.6rem;
+      margin-bottom: 0.25rem;
+    }
+
+    h2 {
+      margin-top: 3rem;
+      font-size: 1.5rem;
+    }
+
+    .tagline {
+      font-style: italic;
+      color: #555;
+      margin-bottom: 2rem;
+    }
+
+    p {
+      margin: 1.2rem 0;
+    }
+
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .cta {
+      margin-top: 3rem;
+      padding-top: 1.5rem;
+      border-top: 1px solid #ddd;
+      font-weight: 500;
+    }
+
+    footer {
+      margin-top: 4rem;
+      font-size: 0.9rem;
+      color: #666;
+      border-top: 1px solid #eee;
+      padding-top: 1rem;
+    }
   </style>
 </head>
+
 <body>
 
-<h1>TrapStack</h1>
+  <h1>TrapStack</h1>
+  <div class="tagline">
+    A collection of dumb ideas involving spring-loaded traps.
+  </div>
 
-<p><em>A collection of dumb ideas involving spring-loaded traps.</em></p>
-
-<p>
-TrapStack started at a bachelor party when we stacked loaded mousetraps
-on the floor to see how high we could go.
-</p>
-
-<p>
-It was chaotic. People flinched. Traps snapped.
-Nobody got hurt. Two layers won.
-</p>
-
-<p>
-This site documents the original game (Trap Tower) and
-variations people have tried since.
-</p>
-
-<footer>
   <p>
-    This is not advice. Mousetraps are mousetraps.
-    If you do dumb things, do them responsibly.
+    TrapStack started at a bachelor party when we stacked loaded mousetraps
+    on the floor to see how high we could go.
   </p>
-</footer>
+
+  <p>
+    It was chaotic. People flinched. Traps snapped.
+    Nobody got hurt. Two layers won.
+  </p>
+
+  <p>
+    This site documents that original game &mdash; <strong>Trap Tower</strong> &mdash;
+    along with variations and bad ideas people have tried since.
+  </p>
+
+  <h2>The first game</h2>
+
+  <p>
+    <strong>Trap Tower</strong> is exactly what it sounds like:
+    build the highest freestanding tower you can out of loaded mousetraps.
+    No base. No glue. No tools. Just nerve.
+  </p>
+
+  <p>
+    A full write-up of how we played it (and what surprised us) is coming soon.
+  </p>
+
+  <div class="cta">
+    Tried this?
+    Send photos or stories to
+    <a href="mailto:hello@trapstack.fun">hello@trapstack.fun</a>
+  </div>
+
+  <footer>
+    <p>
+      This site is documentation, not advice.
+      Mousetraps are mousetraps.
+      If you do dumb things, do them responsibly.
+    </p>
+  </footer>
 
 </body>
 </html>
