Add Vercel Analytics tracking snippet to all HTML files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>TrapStack</title>
   <meta name="description" content="TrapStack is a collection of dumb ideas involving spring-loaded traps that somehow turned into fun games at parties." />
   <link rel="stylesheet" href="styles.css" />
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body>
