--- a/submit.html
+++ b/submit.html
@@ -6,6 +6,10 @@
   <title>Submit — TrapStack</title>
   <meta name="description" content="Send photos, stories, and variations to TrapStack." />
   <link rel="stylesheet" href="styles.css" />
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body>
