--- a/trap-tower.html
+++ b/trap-tower.html
@@ -6,6 +6,10 @@
   <title>Trap Tower — TrapStack</title>
   <meta name="description" content="Trap Tower is the original TrapStack game: build the tallest freestanding structure you can using only loaded mousetraps." />
   <link rel="stylesheet" href="styles.css" />
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body>
