--- a/variants.html
+++ b/variants.html
@@ -6,6 +6,10 @@
   <title>Variants — TrapStack</title>
   <meta name="description" content="Variants and related ideas people have tried under the TrapStack umbrella." />
   <link rel="stylesheet" href="styles.css" />
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body>
