Update Amazon link for mousetraps

--- a/trap-tower.html
+++ b/trap-tower.html
@@ -77,7 +77,7 @@
 
       <p>
         The exact set we used was purchased online
-        (<a href="https://www.amazon.com/dp/B09R9DBWH" target="_blank" rel="noopener noreferrer">Amazon link</a>),
+        (<a href="https://www.amazon.com/Victor-M150-12-Metal-Sustainably-Sourced" target="_blank" rel="noopener noreferrer">Amazon link</a>),
         but many equivalent traps should work similarly.
       </p>
 
