Add note about original game not being photographed

--- a/trap-tower.html
+++ b/trap-tower.html
@@ -43,6 +43,8 @@
         that this might have been a bad idea.
       </p>
 
+      <p>The original game wasn’t photographed. Some nights are like that.</p>
+
       <h2>How we played it</h2>
       <ul>
         <li>Four teams of four slightly inebriated people each</li>
