Style photo note as subtle text

--- a/trap-tower.html
+++ b/trap-tower.html
@@ -43,7 +43,7 @@
         that this might have been a bad idea.
       </p>
 
-      <p>The original game wasn’t photographed. Some nights are like that.</p>
+      <p class="subtle">The original game wasn’t photographed. Some nights are like that.</p>
 
       <h2>How we played it</h2>
       <ul>
