Add community submissions gallery
Includes-AI-Code: true

--- a/trap-tower.html
+++ b/trap-tower.html
@@ -83,6 +83,96 @@
         but many equivalent traps should work similarly.
       </p>
 
+      <h2>Community submissions</h2>
+      <p class="subtle">
+        Photos and videos from people building their own TrapStack towers. Details can be
+        added or updated as submissions come in.
+      </p>
+
+      <h3>Pile / Jenga variant</h3>
+      <div class="gallery">
+        <figure class="media-card">
+          <img src="media/pile/IMG_9055.jpeg" alt="TrapStack pile variant, still image." loading="lazy" />
+          <figcaption>
+            <p class="media-title">Submission</p>
+            <p class="media-meta">Submitter: Paul · Date: 1/31/2026 · Location: Whistler, BC</p>
+            <p class="media-note">Comment: This is going to be trouble...</p>
+          </figcaption>
+        </figure>
+        <figure class="media-card">
+          <video controls preload="metadata" playsinline>
+            <source src="media/pile/IMG_9058.mov" type="video/quicktime" />
+            Your browser does not support the video tag.
+          </video>
+          <figcaption>
+            <p class="media-title">Submission</p>
+            <p class="media-meta">Submitter: Ben · Date: 1/31/2026 · Location: Whistler, BC</p>
+            <p class="media-note">Comment: Boom!</p>
+          </figcaption>
+        </figure>
+        <figure class="media-card">
+          <video controls preload="metadata" playsinline>
+            <source src="media/pile/IMG_9089.mov" type="video/quicktime" />
+            Your browser does not support the video tag.
+          </video>
+          <figcaption>
+            <p class="media-title">Submission</p>
+            <p class="media-meta">Submitter: Paul · Date: 2/4/2026 · Location: Piedmont, CA</p>
+            <p class="media-note">Comment: Careful... careful!</p>
+          </figcaption>
+        </figure>
+        <figure class="media-card">
+          <video controls preload="metadata" playsinline>
+            <source src="media/pile/IMG_9090.mov" type="video/quicktime" />
+            Your browser does not support the video tag.
+          </video>
+          <figcaption>
+            <p class="media-title">Submission</p>
+            <p class="media-meta">Submitter: Jim · Date: 2/4/2026 · Location: Piedmont, CA</p>
+            <p class="media-note">Comment: Well, could have been worse...</p>
+          </figcaption>
+        </figure>
+        <figure class="media-card">
+          <video controls preload="metadata" playsinline>
+            <source src="media/pile/IMG_9091.mov" type="video/quicktime" />
+            Your browser does not support the video tag.
+          </video>
+          <figcaption>
+            <p class="media-title">Submission</p>
+            <p class="media-meta">Submitter: Sam · Date: 2/4/2026 · Location: Piedmont, CA</p>
+            <p class="media-note">Comment: Whoops!</p>
+          </figcaption>
+        </figure>
+      </div>
+
+      <h3>Trap Tower builds</h3>
+      <div class="gallery">
+        <figure class="media-card">
+          <img src="media/tower/IMG_9041.jpeg" alt="Trap Tower build, still image." loading="lazy" />
+          <figcaption>
+            <p class="media-title">Submission</p>
+            <p class="media-meta">Submitter: Paul · Date: 1/30/2026 · Location: Whistler, BC</p>
+            <p class="media-note">Comment: I'm onto something...</p>
+          </figcaption>
+        </figure>
+        <figure class="media-card">
+          <img src="media/tower/IMG_9042.jpeg" alt="Trap Tower build, still image." loading="lazy" />
+          <figcaption>
+            <p class="media-title">Submission</p>
+            <p class="media-meta">Submitter: Joel · Date: 1/30/2026 · Location: Whistler, BC</p>
+            <p class="media-note">Comment: The Inukshuk</p>
+          </figcaption>
+        </figure>
+        <figure class="media-card">
+          <img src="media/tower/IMG_9048.jpeg" alt="Trap Tower build, still image." loading="lazy" />
+          <figcaption>
+            <p class="media-title">Submission</p>
+            <p class="media-meta">Submitter: Paul · Date: 1/30/2026 · Location: Whistler, BC</p>
+            <p class="media-note">Comment: New record!</p>
+          </figcaption>
+        </figure>
+      </div>
+
       <p>
         Want to see a different style of play? Head to <a href="variants.html">Variants</a>.
       </p>
