Add web-friendly video formats
Includes-AI-Code: true

--- a/trap-tower.html
+++ b/trap-tower.html
@@ -101,7 +101,7 @@
         </figure>
         <figure class="media-card">
           <video controls preload="metadata" playsinline>
-            <source src="media/pile/IMG_9058.mov" type="video/quicktime" />
+            <source src="media/pile/IMG_9058.m4v" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <figcaption>
@@ -112,7 +112,7 @@
         </figure>
         <figure class="media-card">
           <video controls preload="metadata" playsinline>
-            <source src="media/pile/IMG_9089.mov" type="video/quicktime" />
+            <source src="media/pile/IMG_9089.m4v" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <figcaption>
@@ -123,7 +123,7 @@
         </figure>
         <figure class="media-card">
           <video controls preload="metadata" playsinline>
-            <source src="media/pile/IMG_9090.mov" type="video/quicktime" />
+            <source src="media/pile/IMG_9090.m4v" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <figcaption>
@@ -134,7 +134,7 @@
         </figure>
         <figure class="media-card">
           <video controls preload="metadata" playsinline>
-            <source src="media/pile/IMG_9091.mov" type="video/quicktime" />
+            <source src="media/pile/IMG_9091.m4v" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <figcaption>
