Add Trap Pile as major variant
Includes-AI-Code: true

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <nav class="site-nav" aria-label="Site navigation">
         <a href="index.html">Home</a>
         <a href="trap-tower.html">Trap Tower</a>
+        <a href="trap-pile.html">Trap Pile</a>
         <a href="variants.html">Variants</a>
         <a href="submit.html">Submit</a>
       </nav>
@@ -58,6 +59,17 @@
         </p>
         <p>
           <a href="trap-tower.html">Read how we played it →</a>
+        </p>
+      </div>
+
+      <div class="card">
+        <h2>Major variant: Trap Pile</h2>
+        <p>
+          Also known as Mousetrap Jenga. Players take turns placing a loaded trap on a plate
+          until someone sets off the pile.
+        </p>
+        <p>
+          <a href="trap-pile.html">Read the rules →</a>
         </p>
       </div>
 
