--- a/variants.html
+++ b/variants.html
@@ -24,6 +24,7 @@
       <nav class="site-nav" aria-label="Site navigation">
         <a href="index.html">Home</a>
         <a href="trap-tower.html">Trap Tower</a>
+        <a href="trap-pile.html">Trap Pile</a>
         <a href="variants.html">Variants</a>
         <a href="submit.html">Submit</a>
       </nav>
@@ -34,6 +35,31 @@
       <p class="subtle">
         These are not official. They’re just things people do once you put traps in a pile.
       </p>
+
+      <h2>Major variants</h2>
+      <div class="card">
+        <h2>Trap Tower</h2>
+        <p>
+          The original game: build the tallest freestanding structure using only loaded
+          mousetraps.
+        </p>
+        <p>
+          <a href="trap-tower.html">Read how we played it →</a>
+        </p>
+      </div>
+
+      <div class="card">
+        <h2>Trap Pile (Mousetrap Jenga)</h2>
+        <p>
+          Players take turns placing loaded traps on a plate. If anything goes off, you
+          replace it. The game ends when someone sets off the pile.
+        </p>
+        <p>
+          <a href="trap-pile.html">Read the rules →</a>
+        </p>
+      </div>
+
+      <h2>Other variants</h2>
 
       <div class="card">
         <h2>Table Turns (Two-Touch Rule)</h2>
