--- a/trap-tower.html
+++ b/trap-tower.html
@@ -24,6 +24,7 @@
       <nav class="site-nav" aria-label="Site navigation">
         <a href="index.html">Home</a>
         <a href="trap-tower.html">Trap Tower</a>
+        <a href="trap-pile.html">Trap Pile</a>
         <a href="variants.html">Variants</a>
         <a href="submit.html">Submit</a>
       </nav>
